--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <body>
 
 <header>
-    <h1>115年度中央氣象署預算審查題庫 (完整版)</h1>
+    <h1>115年度中央氣象署預算審查題庫</h1>
     <p>收錄預算案報告、各組室執行規劃、立法院模擬問答、預算評估報告及決議辦理情形</p>
 </header>
 
