--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>115年度中央氣象署預算審查題庫</title>
+    <title>115年度中央氣象署預算審查暨氣象法修法題庫</title>
     <style>
         :root {
             --primary: #2c3e50;
@@ -12,6 +12,7 @@
             --quake: #8e44ad; /* Seismology */
             --tech: #d35400; /* AI/Tech */
             --admin: #27ae60; /* Budget/Admin */
+            --legal: #576574; /* Legal/Regulation - New Color */
             --bg: #f4f6f7;
             --card-bg: #ffffff;
         }
@@ -42,6 +43,7 @@
         .filter-btn[data-cat="tech"] { border-left: 6px solid var(--tech); }
         .filter-btn[data-cat="marine"] { border-left: 6px solid var(--highlight); }
         .filter-btn[data-cat="admin"] { border-left: 6px solid var(--admin); }
+        .filter-btn[data-cat="legal"] { border-left: 6px solid var(--legal); } /* New for Legal */
 
         /* Search */
         .search-container { margin-bottom: 25px; position: sticky; top: 0; z-index: 100; background: var(--bg); padding: 10px 0; }
@@ -60,6 +62,7 @@
         .qa-card[data-cat="marine"] { border-left-color: var(--highlight); }
         .qa-card[data-cat="admin"] { border-left-color: var(--admin); }
         .qa-card[data-cat="budget"] { border-left-color: #f39c12; }
+        .qa-card[data-cat="legal"] { border-left-color: var(--legal); }
 
         .qa-header { padding: 20px 25px; cursor: pointer; display: flex; justify-content: space-between; align-items: flex-start; background: white; }
         .qa-title { font-weight: 700; font-size: 1.15rem; color: #2c3e50; line-height: 1.5; }
@@ -98,14 +101,15 @@
 <body>
 
 <header>
-    <h1>115年度中央氣象署預算審查題庫</h1>
-    <p>整合 P7 旗艦計畫、AI 智慧交通、海纜修正案、苗栗離岸觀測樁及各組室詳細執行規劃。</p>
+    <h1>115年度中央氣象署預算審查暨氣象法修法題庫</h1>
+    <p>整合 115 年度預算案、P7 新興計畫、2026 年展望，並完整收錄 2026 年初最新「氣象法修正草案」之修法重點與答辯要點。</p>
 </header>
 
 <div class="container">
     <aside class="sidebar">
         <button class="filter-btn active" onclick="filter('all', this)">📋 全部顯示 (All)</button>
         <button class="filter-btn" data-cat="hot" onclick="filter('hot', this)">🔥 重點/敏感 (Hot)</button>
+        <button class="filter-btn" data-cat="legal" onclick="filter('legal', this)">⚖️ 氣象法修法 (New)</button>
         <button class="filter-btn" data-cat="budget" onclick="filter('budget', this)">💰 預算總覽 (Budget)</button>
         <button class="filter-btn" data-cat="quake" onclick="filter('quake', this)">📉 海纜與地震 (Quake)</button>
         <button class="filter-btn" data-cat="marine" onclick="filter('marine', this)">🌊 預報/雷達/海象 (Marine)</button>
@@ -118,7 +122,7 @@
 
     <main>
         <div class="search-container">
-            <input type="text" id="search" class="search-bar" placeholder="🔍 搜尋關鍵字：如 海纜, AI, 無人機, 太空天氣, 薪資..." oninput="doSearch()">
+            <input type="text" id="search" class="search-bar" placeholder="🔍 搜尋關鍵字：如 氣象法, 熱帶低壓, 鄉鎮預報, 媒體查證, 薪資..." oninput="doSearch()">
         </div>
         <div id="qa-container" class="qa-list">
             <!-- QA Cards will be injected here -->
@@ -144,9 +148,169 @@
 </div>
 
 <script>
-    // 完整資料庫 (Full Database) - 20 Questions
+    // 完整資料庫 (Full Database) - Includes new Legal content
     const db = [
-        // --- 💰 預算總覽 (Budget) ---
+        // --- ⚖️ 氣象法修法 (Legal) - NEW ---
+        {
+            cat: "legal",
+            tag: "氣象法修法",
+            bg: "#576574",
+            q: "115年推動「氣象法」修正草案的主要背景與四大政策目標為何？",
+            a: `
+                <p><strong>一、修法背景：環境變遷與產業需求</strong></p>
+                <p>現行氣象法自民國 73 年公布以來，雖歷經修正，但部分條文已不合時宜。隨著氣候變遷加劇、公私部門對氣象資訊需求激增，以及國際氣象產業的蓬勃發展，我國亟需透過修法來完善氣象事業環境。此外，配合行政院組織改造，將「中央氣象局」改制為「中央氣象署」，相關權責事項亦需同步修正。</p>
+                <p><strong>二、四大政策目標</strong></p>
+                <p>本次修法旨在達成我國氣象白皮書揭示的四大目標：(1) <strong>滿足民眾需求</strong>：提供更精細準確的氣象資訊；(2) <strong>守護生命財產</strong>：普及決策支援服務；(3) <strong>擴大經濟效益</strong>：透過公私協力擴大氣象產業規模；(4) <strong>提升國家價值</strong>：強化氣象組織在國家經濟發展中的貢獻。修法將納入「開創氣象服務」及「完善產業與人才培育」等新興概念。</p>
+            `,
+            source: "來源：氣象法修正草案總說明及條文對照表1150107_預告"
+        },
+        {
+            cat: "legal",
+            tag: "災害性天氣",
+            bg: "#576574",
+            q: "氣象法修正草案中，針對「災害性天氣」定義做了哪些關鍵調整？",
+            a: `
+                <p><strong>一、新增「熱帶性低氣壓」與「高溫」</strong></p>
+                <p>鑑於近年全球暖化影響，夏季高溫日數大幅增加，嚴重影響國民健康、農漁業及能源調度，修正草案將<strong>「高溫」</strong>正式納入災害性天氣範疇。同時，考量過去<strong>「熱帶性低氣壓」</strong>（如 0823 水災）也曾造成重大災情，亦將其明確列入，以強化防災預警的法律基礎。</p>
+                <p><strong>二、定義明確化</strong></p>
+                <p>修正條文第三條將災害性天氣定義為「可能造成生命或財產損失」之天氣現象，涵蓋颱風、熱帶性低氣壓、大雨、豪雨、雷電、冰雹、濃霧、龍捲風、強風、低溫、高溫、焚風或乾旱等，使法規更能應對多樣化的極端氣候威脅。</p>
+            `,
+            source: "來源：氣象法修正草案總說明及條文對照表(修正條文第三條說明)"
+        },
+        {
+            cat: "legal",
+            tag: "民間預報",
+            bg: "#576574",
+            q: "修正草案對於民間發布預報的權限有何放寬與限制？為何禁止發布「熱帶性低氣壓」預報？",
+            a: `
+                <p><strong>一、權限放寬：天氣、氣候、海象</strong></p>
+                <p>為促進氣象產業發展，修正草案第 15 條明定，機關（構）、學校、法人、團體或個人經中央氣象署許可後，得發布「天氣、氣候或海象」之預報。這比過去僅限於「氣象或海象」的定義更為明確，涵蓋了中長期的氣候預報需求。</p>
+                <p><strong>二、新增限制：禁報熱帶性低氣壓</strong></p>
+                <p>雖然開放了一般預報，但草案明確規定民間<strong>「不得發布災害性天氣中之颱風、熱帶性低氣壓及豪雨之預報」</strong>。將「熱帶性低氣壓」納入禁發範圍，是因為其致災潛力不亞於輕度颱風（如 0823 水災案例），且其路徑與強度變化迅速，為避免資訊混亂影響防災指揮，故維持由中央氣象署統一發布的機制。</p>
+            `,
+            source: "來源：氣象法修正草案總說明及條文對照表(修正條文第十五條說明)"
+        },
+        {
+            cat: "legal",
+            tag: "媒體規範",
+            bg: "#576574",
+            q: "針對媒體報導氣象資訊，修正草案新增了哪些「事實查證」與「註明出處」的規範？",
+            a: `
+                <p><strong>一、事實查證義務</strong></p>
+                <p>修正草案第 16 條將規範對象由「新聞傳播機構」修正為更廣泛的「新聞傳播媒體」（含網路媒體）。針對報導或引用「非」中央氣象署發布的預報、警報或報告（如引用外國模式或民間公司預報），新增應注意<strong>「事實查證」</strong>的規定，避免散播未經證實的誇大訊息（如「霸王級」、「斷腰颱」等聳動用詞）。</p>
+                <p><strong>二、強制註明出處與發布者</strong></p>
+                <p>為確保公眾能辨識資訊來源，草案明定媒體在報導時，無論是引用氣象署或其他來源，均<strong>「應註明其來源出處及發布時間」</strong>。若引用民間預報，更需同時註明發布者之名稱全銜或姓名，以釐清責任並減少民眾混淆。</p>
+            `,
+            source: "來源：氣象法修正草案總說明及條文對照表(修正條文第十六條說明)"
+        },
+        {
+            cat: "legal",
+            tag: "產業人才",
+            bg: "#576574",
+            q: "為促進氣象產業發展，修正草案在「人才培育」與「資源共享」上有何具體條文？",
+            a: `
+                <p><strong>一、訂定職能基準與能力鑑定</strong></p>
+                <p>修正草案第 18 條賦予中央氣象署新職權，得依產業需求<strong>「訂定產業人才職能基準」</strong>，並推動<strong>「產業人才能力鑑定」</strong>。這旨在建立具公信力的認證機制，縮短學用落差，並促進企業優先聘用獲證人才。</p>
+                <p><strong>二、資源交流與共享協定</strong></p>
+                <p>為降低民間投入氣象研發的門檻，第 20 條新增規定，中央氣象署得與機關、學校或民間團體建立<strong>「氣象業務資源交流、共享及合作協定」</strong>。這將賦予公私合作（Public-Private Partnership）明確的法律依據，促進政府數據與民間技術的結合，加速跨領域應用服務的發展。</p>
+            `,
+            source: "來源：氣象法修正草案總說明及條文對照表(修正條文第十八、二十條說明)"
+        },
+        {
+            cat: "legal",
+            tag: "觀測站",
+            bg: "#576574",
+            q: "新增「約用觀測站」的機制有何用意？與現行「專用觀測站」有何不同？",
+            a: `
+                <p><strong>一、專用 vs. 約用</strong></p>
+                <p>修正草案第 21 條將觀測站區分為兩類：(1) <strong>「專用觀測站」</strong>：主要針對機關（構）為特定目的事業（如水利、農業）設置，需向氣象署申請認可；(2) <strong>「約用觀測站」</strong>：這是新增的類別，針對學校、團體或個人為學術研究或協助執行氣象業務所設置。</p>
+                <p><strong>二、擴大民間參與與資料密度</strong></p>
+                <p>「約用觀測站」機制允許民間透過<strong>「簽訂合作契約」</strong>的方式納入氣象觀測網。這不僅能鼓勵公民科學發展（如學校氣象站），也能在不增加公務預算負擔下，有效提升觀測資料的空間密度，彌補官方測站的不足，這對掌握微氣候特徵具有重要意義。</p>
+            `,
+            source: "來源：氣象法修正草案總說明及條文對照表(修正條文第二十一條說明)"
+        },
+
+        // --- 🌟 2026 最新展望新增題庫 (New Outlook) ---
+        {
+            cat: "tech",
+            tag: "鄉鎮預報2.0",
+            bg: "#d35400",
+            q: "展望 2026 年，推動「鄉鎮天氣預報 2.0」將帶來哪些具體的服務升級？",
+            a: `
+                <p><strong>一、預報時效與頻率的雙重躍升</strong></p>
+                <p>配合 P7 新興計畫的啟動，氣象署將於 2026 年正式推動「鄉鎮天氣預報 2.0」。技術上的核心目標是將短期預報的更新頻率從現行的逐 6 小時加密至<strong>「逐時更新」</strong>，大幅提升資訊的即時性。同時，預報時效將由現行的 7 天延長至 <strong>10 天</strong>，提供更長效的預報資訊，讓民眾與防災單位能有更充裕的時間進行行程規劃或災害應變。</p>
+                <p><strong>二、支援決策的數位治理</strong></p>
+                <p>除了時空解析度的提升，鄉鎮預報 2.0 更強調數位治理的應用。透過發展支援鄉鎮尺度的預報決策及編輯工具，系統將能自動整合多源觀測與數值模式資料，協助預報員快速產製精細的鄉鎮預報產品，並透過標準化的資料介接服務（API），促進這些高解析度氣象資料在交通、農業及防災等跨領域的加值應用。</p>
+            `,
+            source: "來源：2025年業務成果回顧與2026年展望報告、P7計畫說明"
+        },
+        {
+            cat: "quake",
+            tag: "警報新標準",
+            bg: "#8e44ad",
+            q: "針對 0403 地震後的檢討，氣象署調整了哪些「國家級警報」發布標準？",
+            a: `
+                <p><strong>一、新增彈性發布門檻：規模 6.5、震度 3 級</strong></p>
+                <p>針對 2024 年花蓮 0403 地震部分地區未收到警報的爭議，氣象署於 2025 年已完成國家級警報發布標準的調整。除了原有的標準外，新增了<strong>「預估規模達 6.5 以上，且預估震度達 3 級」</strong>的發布條件。這項調整大幅提升了警報的覆蓋率，確保在發生大規模強震時，即使預估震度僅達 3 級的地區也能收到警示，有效避免「漏報」風險，提升民眾的防災安全感。</p>
+                <p><strong>二、縮短預警時間與盲區</strong></p>
+                <p>在技術層面，透過「都會區強震預警精進計畫」的執行，氣象署已在 2025 年成功將臺南市及高雄市的地震警報發布時間由震後 10 秒縮短至 <strong>7 秒</strong>左右，並將預警盲區從 35 公里縮小至 <strong>25 公里</strong>。展望 2026 年，將接續開發臺中都會區的客製化預警系統，全面強化西部人口稠密區的防震應變能力。</p>
+            `,
+            source: "來源：2025年業務成果回顧與2026年展望報告(地震領域)"
+        },
+        {
+            cat: "marine",
+            tag: "觀測樁再利用",
+            bg: "#2980b9",
+            q: "針對「苗栗離岸海氣象觀測樁」的結構體再利用工程，目前進度與規劃為何？",
+            a: `
+                <p><strong>一、解決海上觀測資料稀缺問題</strong></p>
+                <p>為強化臺灣海峽中線的海象監測能力，氣象署推動「苗栗離岸海氣象觀測樁結構體再利用工程」。該工程預計於 2025 年底完成既有鐵塔拆除與結構體安全評估，並於 2026 年全力推進相關整建工作。這項工程將把原本閒置的結構轉型為重要的海氣象觀測據點，直接解決長期以來海峽中線觀測資料不足的痛點。</p>
+                <p><strong>二、支援綠能與航運安全</strong></p>
+                <p>此觀測樁完工後，將能長期、穩定地獲取海峽中部的風、浪、流及氣象數據。這些實測資料對於校驗離岸風電場的風能預報、提升海峽航運安全預警，以及監測通過海峽的天氣系統（如鋒面、颱風）皆具有關鍵價值，是落實「藍色經濟」的重要基礎建設。</p>
+            `,
+            source: "來源：2025年業務成果回顧與2026年展望報告(海洋領域)"
+        },
+        {
+            cat: "tech",
+            tag: "AI衛星應用",
+            bg: "#d35400",
+            q: "2025年氣象署在 AI 與衛星資料的結合應用上，取得了哪些具體成果？",
+            a: `
+                <p><strong>一、獵風者衛星資料的升級與同化</strong></p>
+                <p>2025 年是氣象署深化 AI 應用的關鍵年。透過與國家太空中心的緊密合作，氣象署將國產「獵風者」衛星（Triton）的海面風速資料升級至 2.0 版，並成功納入數值模式進行同化。這項技術有效補足了廣大洋面上觀測資料的不足，經測試證實能顯著提升颱風路徑與強度的預報精準度。</p>
+                <p><strong>二、AI 模型優於傳統模式的潛力</strong></p>
+                <p>在數值預報方面，氣象署完成了新一代區域模式（MPAS）與資料驅動 AI 模型（MLWP）的平行作業測試。結果顯示，AI 模型在颱風路徑預報的表現上，已展現出優於傳統物理模式的潛力。此外，氣象署亦開發了 AI 輔助的觀測資料檢核機制，特別針對溫度與濕度數據進行自動化品質管控，大幅提升了資料處理的效率與準確度。</p>
+            `,
+            source: "來源：2025年業務成果回顧與2026年展望報告(氣象領域)"
+        },
+        {
+            cat: "marine",
+            tag: "一縣市一站",
+            bg: "#2980b9",
+            q: "氣象署如何達成「一縣市一氣象站」目標？這對在地服務有何幫助？",
+            a: `
+                <p><strong>一、補齊觀測網最後拼圖</strong></p>
+                <p>在 2025 年，隨著苗栗後龍氣象站與雲林古坑氣象站的正式成立，氣象署終於完成了「一縣市一氣象站」的重要里程碑。這意味著全臺每一個縣市現在都設有由專業人員駐守的氣象站，不僅完備了國家基礎氣象觀測網，更消除了過去部分縣市缺乏專屬氣象服務據點的缺憾。</p>
+                <p><strong>二、強化在地服務與國際接軌</strong></p>
+                <p>這些駐站人員不僅負責維護觀測品質，更能提供在地化的天氣諮詢與防災服務，深化與地方政府及社區的連結。同時，氣象儀器校正實驗室自 2025 年起開放對外服務，並制定符合 WMO 標準的儀器分級草案，這將確保全臺各地觀測數據的品質一致性，進一步提升我國氣象資料的國際公信力。</p>
+            `,
+            source: "來源：2025年業務成果回顧與2026年展望報告(氣象領域)"
+        },
+        {
+            cat: "quake",
+            tag: "海纜3次修正",
+            bg: "#8e44ad",
+            q: "針對多次流標的「海纜建置計畫」，2026 年有何具體的突破策略？",
+            a: `
+                <p><strong>一、系統架構調整為「嵌入式」</strong></p>
+                <p>「臺灣南部海域地震與海嘯海底監測系統建置計畫」在 2025 年歷經多次流標挑戰。為突破困境，氣象署積極辦理第 3 次計畫修正，將系統架構由原規劃的節點式調整為具擴充功能的<strong>「嵌入式 (In-line) 系統」</strong>。此技術相對成熟且施工風險較低，預期能顯著提高廠商投標意願。</p>
+                <p><strong>二、2026 年關鍵目標</strong></p>
+                <p>展望 2026 年，待修正計畫核定後，氣象署將全力推動招標作業，並隨即開展海纜鋪設路線的詳細調查與設備製造。此系統一旦建成，預期可為南部地區爭取額外 <strong>14 秒</strong>的地震預警時間與 <strong>30 分鐘</strong>的海嘯預警時間，對於防範馬尼拉海溝潛在的強震與海嘯威脅至關重要。</p>
+            `,
+            source: "來源：2025年業務成果回顧與2026年展望報告(地震領域)"
+        },
+
+        // --- 💰 預算總覽 (Budget) - Existing ---
         {
             cat: "budget",
             tag: "預算結構",
@@ -174,7 +338,7 @@
             source: "來源：預算案概述、預報中心115年經費與工項規劃"
         },
 
-        // --- 🤖 科技/AI/HPC (Tech) ---
+        // --- 🤖 科技/AI/HPC (Tech) - Existing ---
         {
             cat: "tech",
             tag: "P7計畫",
@@ -241,7 +405,7 @@
             source: "來源：P7計畫經費表、大氣觀測組規劃、115年太空天氣經費需求"
         },
 
-        // --- 🌊 預報/雷達/海象 (Marine) ---
+        // --- 🌊 預報/雷達/海象 (Marine) - Existing ---
         {
             cat: "marine",
             tag: "無人機",
@@ -295,7 +459,7 @@
             source: "來源：大氣觀測組規劃、農業部合作經費補充資料"
         },
 
-        // --- 📉 海纜與地震 (Quake) ---
+        // --- 📉 海纜與地震 (Quake) - Existing ---
         {
             cat: "quake",
             tag: "海纜建置",
@@ -336,7 +500,7 @@
             source: "來源：地震中心規劃、立法院決議辦理情形"
         },
 
-        // --- 🏢 行政/人事 (Admin) ---
+        // --- 🏢 行政/人事 (Admin) - Existing ---
         {
             cat: "admin",
             tag: "電動車",
@@ -390,7 +554,7 @@
             source: "來源：南區中心規劃、P7計畫說明"
         },
 
-        // --- 🔥 重點/敏感 (Hot) ---
+        // --- 🔥 重點/敏感 (Hot) - Existing ---
         {
             cat: "hot",
             tag: "AI預報",
