--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 <header>
     <h1>115年度中央氣象署預算審查暨氣象法修法全方位題庫</h1>
-    <p>整合 115 年度預算案、P7 新興計畫、智慧海象期末成果，並完整收錄 AI 預報、裂流預警、海嘯浮標維運及氣象法修正等深度解析。</p>
+    <p>整合 115 年度預算案、P7、O計畫、R計畫期末成果，以及氣象法修正等深度解析。</p>
 </header>
 
 <div class="container">
